# alertiq

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/alertiq/: __init__.py  cli.py  models.py  report.py  simulator.py
src/alertiq/correlator/: __init__.py  engine.py  rules.py  timeline.py
src/alertiq/responder/: __init__.py  automator.py  playbook.py
src/alertiq/triage/: __init__.py  classifier.py  dedup.py  priority.py
tests/: test_benchmark.py  test_classifier.py  test_core.py  test_correlator.py  test_dedup.py  test_integration.py  test_models.py  test_pipeline.py  test_priority.py  test_responder.py  test_simulator.py
